docs: for interest and category endpoints
