# backend/internal/interfaces/rest/v1/category_handler.go
@@ -24,7 +24,18 @@ func NewCategoryHandler(db *gorm.DB, redis *redis.Client) types.Route {
 	}
 }
 
-func (h *CategoryHandler) GetAllCategory(c *gin.Context) {
+// GetAllCategory godoc
+// @Summary      Get all categories
+// @Description  Retrieve all categories
+// @Tags         Category
+// @Accept       json
+// @Produce      json
+// @Param	     Authorization  header  string  true  "Bearer token for authentication"
+// @Success      200  {object}  types.SuccessResponse{data=[]common.CategoryTypeResult}
+// @Failure      500  {object}  types.ErrorResponse
+// @Router       /category [get]
+// @Security     BearerAuth
+func (h *CategoryHandler) getAllCategory(c *gin.Context) {
 	result, err := h.categoryService.GetAllCategory()
 	if err != nil {
 		c.JSON(500, types.ErrorResponse{
