# backend/internal/interfaces/rest/v1/user_handler.go
@@ -11,7 +11,6 @@ import (
 	"github.com/HappyNaCl/Cavent/backend/internal/interfaces/rest/v1/types"
 	"github.com/gin-gonic/gin"
 	"github.com/redis/go-redis/v9"
-	"go.uber.org/zap"
 	"gorm.io/gorm"
 )
 
@@ -31,6 +30,19 @@ func (u UserHandler) SetupRoutes(v1 *gin.RouterGroup) {
 	v1.GET("/user/interest", u.GetUserInterests)
 }
 
+// UpdateUserInterest godoc
+// @Summary      Update user interests
+// @Description  Update user interests
+// @Tags         User
+// @Accept       json
+// @Produce      json
+// @Param        Authorization  header  string  true  "Bearer token for authentication"
+// @Param        request  body  request.UpdateUserInterestRequest  true  "Update user interests request"
+// @Success      200  {object}  types.SuccessResponse
+// @Failure      400  {object}  types.ErrorResponse
+// @Failure      500  {object}  types.ErrorResponse
+// @Router       /user/interest [put]
+// @Security     BearerAuth
 func (u UserHandler) UpdateUserInterest(c *gin.Context) {
 	var req request.UpdateUserInterestRequest
 
@@ -40,8 +52,6 @@ func (u UserHandler) UpdateUserInterest(c *gin.Context) {
 		})
 		return
 	}
-
-	zap.L().Sugar().Debugf("CategoryIds type: %T, value: %v", req.CategoryIds, req.CategoryIds[0])
 
 	userId, ok := c.Get("sub")
 	if !ok {
@@ -111,9 +121,20 @@ func (u UserHandler) UpdateUserInterest(c *gin.Context) {
 		Message: "success",
 		Data:    nil,
 	})
-	return
 }
 
+// GetUserInterests godoc
+// @Summary      Get user interests
+// @Description  Get user interests
+// @Tags         User
+// @Accept       json
+// @Produce      json
+// @Param        Authorization  header  string  true  "Bearer token for authentication"
+// @Success      200  {object}  types.SuccessResponse
+// @Failure      400  {object}  types.ErrorResponse
+// @Failure      500  {object}  types.ErrorResponse
+// @Router       /user/interest [get]
+// @Security     BearerAuth
 func (u UserHandler) GetUserInterests(c *gin.Context) {
 	userId, exists := c.Get("sub")
 	if !exists {
